--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"express": "^4.18.1",
 		"mongoose": "^6.4.0",
-		"nodemon": "^2.0.16"
+		"nodemon": "^2.0.16",
+		"uuid": "^9.0.0"
 	}
 }
